# hue-zigbee-encoding

./: README.md  pyproject.toml
.github/workflows/: ci.yml
hue_zigbee_encoding/: __init__.py
src/hue_zigbee_encoding/: __init__.py
tests/: test_encoding.py
typescript/: README.md  eslint.config.mts  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
typescript/src/: index.ts
typescript/test/: encoding.test.ts
